Start using Chimney for DTO mapping (#283)
